--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -6,8 +6,8 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
-# There is also a guide on our official webpage under
-# http://www.powerfolder.com/?q=node/i18n
+# There is also a guide on our offical webpage under
+# http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
 # contact@powerfolder.com
@@ -16,65 +16,10 @@
 # Your PowerFolder Team
 # http://www.powerfolder.com
 #
-foldercreate.dialog.backuperror.title=Unable to backup folder
-foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
-foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
-freelimitdialog.title=Heavy use detected
-freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-freelimitdialog.reason=Reason: More than {0} Folders configured.
-freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
-freelimitdialog.buypro=Buy PowerFolder Pro
-freelimitdialog.ignore=Ignore
-
-wizard.webservice.learnmore=What is the PowerFolder WebService?
-general.webservice=Online Storage
-quickinfo.webservice.title=Online Storage - WebService
-quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
-quickinfo.webservice.connected=Connected to the PowerFolder WebService
-quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
-quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
-
-wizard.webservice.login=Online Storage Login
-wizard.webservice.enteraccount=Please enter your account data to login to the WebService
-wizard.webservice.username=Email
-wizard.webservice.password=Password
-wizard.webservice.register=Register new Account
-
-wizard.webservice.mirrorsetup=Backup Folder by WebService
-wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
-
-openwebservice.description=Opens the WebService in the default browser
-openwebservice.key=B
-openwebservice.name=Open in Browser
-
-mirrorfolder.description=Setup the WebService to backup a folder
-mirrorfolder.key=B
-mirrorfolder.name=Backup Folder
-
-aboutwebservice.description=Opens the WebService of the webservice in default browser
-aboutwebservice.key=A
-aboutwebservice.name=About WebService
-
-buypro.description=Upgrade to PowerFolder Pro now
-buypro.key=B
-buypro.name=Buy Pro
-
-limitedconnection.dont_autodetect=No longer detect limited connectivity
-syncprofile.backupsource.name=Backup (Source)
-syncprofile.backuptarget.name=Backup (Target)
-
-foldercreate.dialog.sendinvitation=Send invitations afterwards
-
-dialog.updatecheck.failed.title=Update failed
-dialog.updatecheck.failed.text=Update failed. Please check your internet connection.\n \nPowerFolder Pro: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
-preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
-
-general.apply=Apply
 
 abortdownload.description=Aborts the selected downloads and removed them from the download queue
 abortdownload.key=a
@@ -111,6 +56,10 @@ about.dialog_contributers_tab=team
 about.key=h
 about.name=Help
 
+aboutwebservice.description=Opens the WebService of the webservice in default browser
+aboutwebservice.key=A
+aboutwebservice.name=About WebService
+
 addfriend.description=Adds user to friendlist
 addfriend.key=f
 addfriend.name=Add to Friends
@@ -121,6 +70,10 @@ addmodifierfriend.name=Add file Modifier to Friends
 
 addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Range
+
+buypro.description=Upgrade to PowerFolder Pro now
+buypro.key=B
+buypro.name=Buy Pro
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
 chatpanel.chat_with=Chat with
@@ -148,11 +101,11 @@ createshortcut.name=Create desktop shortcut
 delete_confimation.busy.description=Removing file(s)
 delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text=Are you sure you want to delete the following file(s)\:\n (Note that these files are really deleted from your system, not moved to the "Recycle Bin").
-delete_confimation.text_movetorecyclebin=Are you sure you want to move the following file(s) to the PowerFolder Recycle Bin?
 delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
+delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
+delete_confimation.text_movetorecyclebin=Are you sure you want to move the following file(s) to the PowerFolder Recycle Bin?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
 delete_confimation.text_movetorecyclebin_directory=Are you sure you want to move the following file(s) and\nor directories (including subdirectories and the files) to\nthe PowerFolder Recycle Bin?
-delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
 delete_confimation.title=Delete files?
 
 deletefile.description=Delete selected file(s)
@@ -164,6 +117,7 @@ dialog.addmembertofriendlist.button.no_neveraskagain=No (Never ask me again)
 dialog.addmembertofriendlist.button.yes=Yes
 dialog.addmembertofriendlist.explain=(By adding someone to your friendlist, you give him the permission to modify the\ncontent of your folders. e.g. to add new files. You can easily change the friend\nstatus of a member using the context menus (right-mouse-click)).
 dialog.addmembertofriendlist.question={0} joined one or more folders\:\n\n{1}\ndo you want to add him to your friendlist now?
+dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
 dialog.addmembertofriendlist.title=Add {0} to friendlist
 dialog.alreadyrunning.exitbutton=Exit
 dialog.alreadyrunning.startbutton=Start anyways
@@ -188,6 +142,8 @@ dialog.updatecheck.developmentversion.optionrestart=Restart
 dialog.updatecheck.developmentversion.text=\nA new development version of PowerFolder has been downloaded.\n\n - Buildtimes -\nThis version\: {0}\nNew version\: {1}\n\nPlease restart PowerFolder now.\n
 dialog.updatecheck.developmentversion.title=New development version
 dialog.updatecheck.downloadAndUpdate=Download and Update now
+dialog.updatecheck.failed.text=Update failed. Please check your internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+dialog.updatecheck.failed.title=Update failed
 dialog.updatecheck.gotoHomepage=Go to PowerFolder Homepage
 dialog.updatecheck.noUpdateAvailable=This version is up to date
 dialog.updatecheck.nothingNeverAsk=Nothing and Never ask again
@@ -292,7 +248,11 @@ folder.members.synchronisation_panel.local_size=Local Size
 folder.members.synchronisation_panel.title=Member Sync Status
 
 foldercreate.description=Creates a new shared folder
+foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
+foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
+foldercreate.dialog.backuperror.title=Unable to backup folder
 foldercreate.dialog.saveinvitation=Save an invitation in the folder
+foldercreate.dialog.sendinvitation=Send invitations afterwards
 foldercreate.dialog.settings=Enter the settings for the new shared folder
 foldercreate.dialog.title=Create new Folder
 foldercreate.dirempty.text=Base directory of folder should not be empty
@@ -307,9 +267,6 @@ foldercreate.nameempty.text=Name of folder should not be empty
 foldercreate.nameempty.title=Foldername required
 foldercreate.progress.text=Creating Folder '{0}'
 foldercreate.success=Folder {0} shared, local copy at '{1}'
-
-foldermove.progress.title=Folder Move
-foldermove.progress.text=Moving folder '{0}'
 
 folderexception.dialog.text=Unable to join folder '{0}'.\nReason\: {1}
 folderexception.dialog.title=Problem with folder '{0}'
@@ -337,10 +294,16 @@ folderleave.dialog.title=Leave folder {0} ?
 folderleave.key=L
 folderleave.name=Leave folder
 
+foldermove.progress.text=Moving folder '{0}'
+foldermove.progress.title=Folder Move
+
 folderpanel.chattab.title=Chat
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
 folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
 folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
+folderpanel.hometab.choose_local_folder.title=Choose local folder
+folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
+folderpanel.hometab.confirm_local_folder_move.title=Move local folder
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
 folderpanel.hometab.number_of_available_files_at_other_members=Number of available files at other members
@@ -353,9 +316,6 @@ folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
 folderpanel.hometab.total_size=Total size
-folderpanel.hometab.confirm_local_folder_move.title=Move local folder
-folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
-folderpanel.hometab.choose_local_folder.title=Choose local folder
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
@@ -379,6 +339,14 @@ folderrepository.warnonclose.neveraskagain=Never ask this again
 folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folderrepository.warnonclose.title=Continue Exit?
 
+freelimitdialog.buypro=Buy PowerFolder Pro
+freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
+freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
+freelimitdialog.ignore=Ignore
+freelimitdialog.reason=Reason\: More than {0} Folders configured.
+freelimitdialog.title=Heavy use detected
+freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
+
 friendsearch.no_user_found=No user found
 friendsearch.nodetable.hostname=Hostname
 friendsearch.nodetable.ip=IP
@@ -392,6 +360,7 @@ friendspanel.n_a=n/a
 friendspanel.search_for_user=Search for user
 friendspanel.search_results=Search results
 
+general.apply=Apply
 general.availability=Availability
 general.cancel=Cancel
 general.cancel.key=C
@@ -436,6 +405,7 @@ general.today=today
 general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
+general.webservice=Online Storage
 general.yesterday=yesterday
 
 hideoffline.description=The offline users will be filtered from this search result 
@@ -460,6 +430,7 @@ join_by_invitation.name=Load Invitation
 joinfolder.already_joined_text=You are already a member of folder {0}
 joinfolder.already_joined_title=Unable to join {0}
 
+limitedconnection.dont_autodetect=No longer detect limited connectivity
 limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limitedconnection.title=Limited connectivity
 
@@ -492,6 +463,10 @@ member.non_mutual_friend=None mutual friend
 member.onlan=Onlan
 member.supernode=Supernode
 
+mirrorfolder.description=Setup the WebService to backup a folder
+mirrorfolder.key=B
+mirrorfolder.name=Backup Folder
+
 mp3fileinfo.album=Album
 mp3fileinfo.artist=Artist
 mp3fileinfo.bitrate=Bitrate
@@ -508,11 +483,11 @@ myfolderstable.number_of_available_files=\# Available
 myfolderstable.number_of_deleted_files=\# Deleted
 myfolderstable.number_of_local_files=\# Local
 myfolderstable.number_of_members={0} members
+myfolderstable.sync=Sync
 myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profile
 myfolderstable.total_size=Total Size
 myfolderstable.type=Type
-myfolderstable.sync=Sync
 
 navigationbuttons.back=Back
 navigationbuttons.back_to=Back to {0}
@@ -568,6 +543,10 @@ openfile.description=Open (Run) selected file
 openfile.key=O
 openfile.name=Open file
 
+openwebservice.description=Opens the WebService in the default browser
+openwebservice.key=B
+openwebservice.name=Open in Browser
+
 plugin_disable.description=Disable (and stop) Plugin
 plugin_disable.key=D
 plugin_disable.name=Disable
@@ -594,6 +573,7 @@ preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Color theme
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
@@ -632,6 +612,8 @@ preferences.dialog.networkmode.private=LAN and Internet
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Nickname
 preferences.dialog.nonwindowsinfo=Attention\: Some settings are only available on Windows systems
+preferences.dialog.openport=Automatically open Windows Firewall
+preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
 preferences.dialog.plugin.classname=Java classname
 preferences.dialog.plugin.description=Description
 preferences.dialog.plugin.name=Name
@@ -644,17 +626,19 @@ preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.showadvanced=Show Advanced Preferences
-preferences.dialog.smalltoolbar=Use small toolbar icons
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
 preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
+preferences.dialog.smalltoolbar=Use small toolbar icons
+preferences.dialog.startwithwindows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validated successfully\!
 preferences.dialog.statusValidFailed=DynDns {0}\: validation Failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
+preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Use ZIP Compression on LAN 
 preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.warnningMessage=Warning
@@ -721,6 +705,11 @@ quickinfo.user.isconnectedinet=Is on the Internet
 quickinfo.user.isconnectedlan=Is on LAN
 quickinfo.user.isdiconnected=Is disconnected
 quickinfo.user.secureconnected=securely connected
+quickinfo.webservice.connected=Connected to the PowerFolder WebService
+quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
+quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
+quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
+quickinfo.webservice.title=Online Storage - WebService
 
 reconnect.description=Reconnects to this user now
 reconnect.key=r
@@ -829,6 +818,8 @@ synchronisation.warning.title=Activate synchronisation profile {0} for {1}
 
 syncprofile.autodownload_all.name=Auto-download (everything)
 syncprofile.autodownload_friends.name=Auto-download (from friends)
+syncprofile.backupsource.name=Backup (Source)
+syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Custom...
 syncprofile.leecher.name=Torrent downloader
 syncprofile.leechreleaser.name=Torrent releaser
@@ -871,6 +862,8 @@ unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=U
 unignorefile.name=Remove from Ignore
 
+winutils.shortcut.description=This shortcut was placed here by PowerFolder
+
 wizard.basicsetup.enternick=Please enter your nickname
 wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
@@ -910,6 +903,7 @@ wizard.projectsync.setupsync=Setup a project synchronisation
 wizard.projectsync.successjoin=You have successfully joined the project\!
 wizard.projectsync.takepartsync=Take part in a synchronisation
 wizard.projectsync.title=Project synchronization
+wizard.sendinvitations.additionaltext=Additional Information
 wizard.sendinvitations.joinsync=Invitation files are required to join a synchronization.
 wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
 wizard.sendinvitations.offline=Not connected
@@ -934,19 +928,17 @@ wizard.syncpcspanel.selecttarget=Please select local target directory
 wizard.syncpcspanel.setup=Setup a new synchronization
 wizard.syncpcspanel.takepart=Take part in a synchronization
 wizard.syncpcspanel.title=Synchronize PCs
+wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+wizard.webservice.learnmore=What is the PowerFolder WebService?
+wizard.webservice.login=Online Storage Login
+wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
+wizard.webservice.mirrorsetup=Backup Folder by WebService
+wizard.webservice.password=Password
+wizard.webservice.register=Register new Account
+wizard.webservice.username=Email
 wizard.whattodo.bordertext=Choose your action
 wizard.whattodo.filesharing=Share Files
 wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
-
-wizard.sendinvitations.additionaltext=Additional Information
-preferences.dialog.openport=Automatically open Windows Firewall
-preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
-
-preferences.dialog.startwithwindows=Start PowerFolder with Windows
-preferences.dialog.userecyclebin=Use recycle bin (default)
-winutils.shortcut.description=This shortcut was placed here by PowerFolder
-
-dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
