--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -303,6 +303,8 @@ folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains
 folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.hometab.choose_local_folder.title=Choose local folder
 folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
+folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
+folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.confirm_local_folder_move.title=Move local folder
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
