Shows now when no direct connect is possible

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+friendspanel.unable_to_connect=Currently online (Unable to connect)
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
