#518 - change Sync PC to Mirror.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -828,7 +828,7 @@ syncprofile.leecher.name=Torrent downloader
 syncprofile.leechreleaser.name=Torrent releaser
 syncprofile.manualdownload.name=Manual download
 syncprofile.projectwork.name=Project work
-syncprofile.syncpcs.name=Synchronize PCs
+syncprofile.syncpcs.name=Mirror
 
 systray.exit=Exit
 systray.hide=Hide
@@ -907,7 +907,7 @@ wizard.projectsync.successjoin=You have successfully joined the project\!
 wizard.projectsync.takepartsync=Take part in a synchronisation
 wizard.projectsync.title=Project synchronization
 wizard.sendinvitations.additionaltext=Additional Information
-wizard.sendinvitations.joinsync=Invitation files are required to join a synchronization.
+wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
 wizard.sendinvitations.offline=Not connected
 wizard.sendinvitations.overpf=Via PowerFolder now
@@ -923,14 +923,14 @@ wizard.setupdns.improvesread=It improves your reachability. However this is not 
 wizard.setupdns.nodnssetup=You did not setup a (dynamic) dns address yet\!
 wizard.setupdns.title=Setup (dynamic) dns
 wizard.setupsuccess=Setup successfully
-wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder synchronization\!\n
-wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder synchronization\!\n
+wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
+wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
-wizard.syncpcspanel.select=Please select the directory, which should be synced
+wizard.syncpcspanel.select=Please select the directory which should be mirrored
 wizard.syncpcspanel.selecttarget=Please select local target directory
-wizard.syncpcspanel.setup=Setup a new synchronization
-wizard.syncpcspanel.takepart=Take part in a synchronization
-wizard.syncpcspanel.title=Synchronize PCs
+wizard.syncpcspanel.setup=Setup a new mirror
+wizard.syncpcspanel.takepart=Take part in a mirror
+wizard.syncpcspanel.title=Mirror
 wizard.webservice.enteraccount=Please enter your account data to login to the WebService
 wizard.webservice.learnmore=What is the PowerFolder WebService?
 wizard.webservice.login=Online Storage Login
@@ -943,5 +943,5 @@ wizard.whattodo.bordertext=Choose your action
 wizard.whattodo.filesharing=Share Files
 wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
-wizard.whattodo.syncpcs=Synchronize PCs
+wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=What do you want to do ?
