#516 - Add 'verbose' setting to advanced properties tab. - Add verbose ConfiguratonEntry. - Load / save verbose property.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -626,7 +626,7 @@ preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.title=Pro Settings
 preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
-preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
+preferences.dialog.restarttext=Some changes require PowerFolder to restart.\nDo you want to restart now?\n 
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.showadvanced=Show Advanced Preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
@@ -650,6 +650,7 @@ preferences.dialog.xbehavior.exit=Exit program
 preferences.dialog.xbehavior.minimize=Minimize to system tray
 preferences.key=p
 preferences.name=Preferences
+preferences.dialog.verbose=Enable verbose logging
 
 previewfiles.description=Preview files in this Folder
 previewfiles.key=P
