#516 - add debugReports configuration

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -651,6 +651,7 @@ preferences.dialog.xbehavior.minimize=Minimize to system tray
 preferences.key=p
 preferences.name=Preferences
 preferences.dialog.verbose=Enable verbose logging
+preferences.dialog.debugReports=Enable debug reports
 
 previewfiles.description=Preview files in this Folder
 previewfiles.key=P
