Added "hashing" notification for uploads/downloads

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -947,3 +947,5 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=What do you want to do ?
+
+transfers.hashing=Hashing
