--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -16,7 +16,8 @@
 # Your PowerFolder Team
 # http://www.powerfolder.com
 #
-
+chat.notification.option1=Answer
+chat.notification.option2=Close
 friendspanel.unable_to_connect=Currently online (Unable to connect)
 abortcopy.description=Abort the copy process
 abortcopy.key=A
