--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -344,12 +344,16 @@ folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n
 folderrepository.warnonclose.title=Continue Exit?
 
 freelimitdialog.buypro=Buy PowerFolder Pro
-freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
-freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
-freelimitdialog.ignore=Ignore
-freelimitdialog.reason=Reason\: More than {0} Folders configured.
-freelimitdialog.title=Heavy use detected
+freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
+freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
+freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro!
+freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
+freelimitdialog.reduce=Reduce usage
+freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+freelimitdialog.title=Extensive use detected
 freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
+onlinelabel.disabled=Disabled (Extensive use detected)
+onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 
 friendsearch.no_user_found=No user found
 friendsearch.nodetable.hostname=Hostname
