--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -16,9 +16,7 @@
 # Your PowerFolder Team
 # http://www.powerfolder.com
 #
-chat.notification.option1=Answer
-chat.notification.option2=Close
-friendspanel.unable_to_connect=Currently online (Unable to connect)
+
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -76,6 +74,9 @@ addressEditor.title=IP-Range
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
 buypro.name=Buy Pro
+
+chat.notification.option1=Answer
+chat.notification.option2=Close
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
 chatpanel.chat_with=Chat with
@@ -305,9 +306,8 @@ folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains
 folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.hometab.choose_local_folder.title=Choose local folder
 folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
-folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
-folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.confirm_local_folder_move.title=Move local folder
+folderpanel.hometab.folder_not_empty.text=Folder {0}\nmust be empty.
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
 folderpanel.hometab.number_of_available_files_at_other_members=Number of available files at other members
@@ -315,6 +315,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Number of deleted files in
 folderpanel.hometab.number_of_local_files_in_folder=Number of local files in folder
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Secret
+folderpanel.hometab.sub_folder_move.text=Folder {0}\ncannot be moved to a subfolder\n{1}.
 folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
@@ -346,14 +347,12 @@ folderrepository.warnonclose.title=Continue Exit?
 freelimitdialog.buypro=Buy PowerFolder Pro
 freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
 freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
-freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro!
+freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
 freelimitdialog.heavyusagedetected=PowerFolder has detected that you are extensively using it.
-freelimitdialog.reduce=Reduce usage
 freelimitdialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+freelimitdialog.reduce=Reduce usage
 freelimitdialog.title=Extensive use detected
 freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
-onlinelabel.disabled=Disabled (Extensive use detected)
-onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 
 friendsearch.no_user_found=No user found
 friendsearch.nodetable.hostname=Hostname
@@ -367,6 +366,7 @@ friendspanel.currently_online=Currently online
 friendspanel.n_a=n/a
 friendspanel.search_for_user=Search for user
 friendspanel.search_results=Search results
+friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 general.apply=Apply
 general.availability=Availability
@@ -534,6 +534,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Unable to connect to a source
 
 onlinelabel.connecting=Connecting
 onlinelabel.connecting.text=You are online, but connected to very few users. Wait a short time to get fully connected. If still not, read the FAQ @ http\://www.powerfolder.com
+onlinelabel.disabled=Disabled (Extensive use detected)
+onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
 onlinelabel.offline=Offline
 onlinelabel.offline.text=You are offline. Not connected to any user on the PowerFolder network
 onlinelabel.online=Online
@@ -580,6 +582,7 @@ preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Color theme
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
+preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
@@ -649,14 +652,13 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Use ZIP Compression on LAN 
 preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
+preferences.dialog.verbose=Enable verbose logging
 preferences.dialog.warnningMessage=Warning
 preferences.dialog.xbehavior=Exit behavior
 preferences.dialog.xbehavior.exit=Exit program
 preferences.dialog.xbehavior.minimize=Minimize to system tray
 preferences.key=p
 preferences.name=Preferences
-preferences.dialog.verbose=Enable verbose logging
-preferences.dialog.debugReports=Enable debug reports
 
 previewfiles.description=Preview files in this Folder
 previewfiles.key=P
@@ -859,6 +861,7 @@ title.search.users=Find Friends
 transfers.completed=completed
 transfers.eta=ETA
 transfers.from=From
+transfers.hashing=Hashing
 transfers.kbs={0} KB/s
 transfers.local=local
 transfers.pending=Pending
@@ -952,5 +955,3 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Mirror
 wizard.whattodo.title=What do you want to do ?
-
-transfers.hashing=Hashing
