Changes by maxim

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
