--- a/.classpath
+++ b/.classpath
@@ -6,15 +6,15 @@
 	<classpathentry kind="src" path="src/jwf"/>
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/main"/>
-	<classpathentry kind="lib" path="lib/junit.jar"/>
-<classpathentry kind="lib" path="lib/commons-io-1.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-cli-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/binding-1.1.2.jar" sourcepath="lib/binding-1.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/forms-1.0.7.jar" sourcepath="lib/forms-1.0.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/looks-2.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/validation-1.3.0.jar" sourcepath="lib/validation-1.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/uif_lite-2.0.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="lib/binding-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/forms-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/looks-2.1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/validation-2.0.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
