--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -26,6 +26,16 @@ abortdownload.description=Aborts the selected downloads and removed them from th
 abortdownload.key=a
 abortdownload.name=Abort
 
+http.options.title=HTTP Connection settings
+http.options.proxysettings=Proxy-Settings
+http.options.withauth=With authorization
+http.options.directconnect=Direct connection to the internet
+http.options.httpproxy=HTTP-Proxy
+http.options.host=Hostname
+http.options.port=Port
+http.options.username=Username
+http.options.password=Password
+
 aborttransfer.description=Aborts the selected transfer
 aborttransfer.key=a
 aborttransfer.name=Abort transfer(s)
