#520 - Transfer problem download messages.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -600,6 +600,7 @@ preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
+preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dyndns=my (dynamic) DNS
 preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
@@ -881,6 +882,23 @@ transfers.queued=queued
 transfers.requested=requested
 transfers.searching=Searching...
 transfers.to=To
+
+transfer.problem.title=File Transfer Problem for {0}
+transfer.problem.transfer.broken=The transfer was broken from {0}
+transfer.problem.old.upload=Already received download request for {0}
+transfer.problem.broken.download=The transfer download was broken
+transfer.problem.broken.upload==The transfer upload was broken
+transfer.problem.transfer.exception=There was a TransferException: {0}
+transfer.problem.invalid.part=Received invalid part request
+transfer.problem.file.not.found.exception=There was a FileNotFoundException: {0}
+transfer.problem.io.exception=There was an IOException: {0}
+transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException: {0}
+transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0}
+transfer.problem.temp.file.open=Unable to create/open tempfile for {0}
+transfer.problem.temp.file.write=Unable to write to tempfile for {0}
+transfer.problem.illegal.chunk=Received illegal chunk: {0}
+transfer.problem.md5.error=There was an MD5-Hash error
+transfer.problem.general.exception=There was an Exception: {0}
 
 unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=U
