Upder case first letter for consistency.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -601,7 +601,7 @@ preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a 
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
-preferences.dialog.dyndns=my (dynamic) DNS
+preferences.dialog.dyndns=My (dynamic) DNS
 preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
 preferences.dialog.dyndnsCurrentIP=Current IP
