#520 - Move handling to listener; rework messages.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -883,22 +883,22 @@ transfers.requested=requested
 transfers.searching=Searching...
 transfers.to=To
 
-transfer.problem.title=File Transfer Problem for {0}
-transfer.problem.transfer.broken=The transfer was broken from {0}
-transfer.problem.old.upload=Already received download request for {0}
-transfer.problem.broken.download=The transfer download was broken
-transfer.problem.broken.upload==The transfer upload was broken
-transfer.problem.transfer.exception=There was a TransferException: {0}
-transfer.problem.invalid.part=Received invalid part request
-transfer.problem.file.not.found.exception=There was a FileNotFoundException: {0}
-transfer.problem.io.exception=There was an IOException: {0}
-transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException: {0}
-transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0}
-transfer.problem.temp.file.open=Unable to create/open tempfile for {0}
-transfer.problem.temp.file.write=Unable to write to tempfile for {0}
-transfer.problem.illegal.chunk=Received illegal chunk: {0}
-transfer.problem.md5.error=There was an MD5-Hash error
-transfer.problem.general.exception=There was an Exception: {0}
+transfer.problem.title=File Transfer Problem
+transfer.problem.transfer.broken=The transfer was broken for {0} from {1}
+transfer.problem.old.upload=Already received download request for {0} from {1}
+transfer.problem.broken.download=The transfer download was broken for {0}
+transfer.problem.broken.upload==The transfer upload was broken for {0}
+transfer.problem.transfer.exception=There was a TransferException for {0}: {1}
+transfer.problem.invalid.part=Received invalid part request {0}
+transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}: {1}
+transfer.problem.io.exception=There was an IOException for {0}: {1}
+transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}: {1}
+transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+transfer.problem.illegal.chunk=Received illegal chunk for {0}: {1}
+transfer.problem.md5.error=There was an MD5-Hash error for {0}
+transfer.problem.general.exception=There was an Exception for {0}: {1}
 
 unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=U
